# django-choices-array-fields

./: .coveragerc  README.md  pyproject.toml  tox.ini
choices_fields/: apps.py  fields.py
demo/: admin.py  apps.py  models.py  settings.py
demo/migrations/: 0001_initial.py  0002_customuser_user_status_alter_customuser_user_type.py
tests/: settings.py  test_fields.py
